# nageru-2.1.0

./: NEWS  README  meson.build  meson_options.txt
debian/: changelog  control  copyright  futatabi.install  nageru.install  rules
debian/source/: include-binaries
futatabi/: add_base_flow.frag  behringer_cmd_pl1.midimapping  blend.frag  chroma_subsample.frag  chroma_subsample.vert  chroma_subsampler.cpp  chroma_subsampler.h  clip_list.cpp  clip_list.h  db.cpp  db.h  defs.h  densify.frag  densify.vert  derivatives.frag  diffusivity.frag  embedded_files.h  equations.frag  equations.vert  eval.cpp  exif_parser.cpp  exif_parser.h  export.cpp  export.h  flags.cpp  flags.h  flow.cpp  flow.h  flow_main.cpp  frame.proto  frame_on_disk.cpp  frame_on_disk.h  futatabi_midi_mapping.proto  gpu_timers.cpp  gpu_timers.h  gray.frag  hole_blend.frag  hole_fill.frag  hole_fill.vert  jpeg_destroyer.h  (+41 more)
nageru/: Nageru-Grafana.json  alsa_input.cpp  alsa_input.h  alsa_output.cpp  alsa_pool.cpp  analyzer.cpp  audio_encoder.cpp  audio_encoder.h  audio_expanded_view.ui  audio_mixer.cpp  audio_mixer.h  basic_stats.cpp  basic_stats.h  benchmark_audio_mixer.cpp  card_type.h  cbcr_subsample.frag  cbcr_subsample.vert  cef_capture.cpp  cef_capture.h  chroma_subsampler.cpp  compression_reduction_meter.cpp  compression_reduction_meter.h  context_menus.cpp  correlation_meter.cpp  correlation_meter.h  decibel.h  decklink_capture.cpp  decklink_capture.h  decklink_output.cpp  decklink_output.h  decklink_util.cpp  decklink_util.h  defs.h  display.ui  ebu_r128_proc.cc  embedded_files.h  ffmpeg_capture.cpp  ffmpeg_capture.h  ffmpeg_util.cpp  flags.cpp  (+65 more)
nageru/experiments/: measure-x264.pl  presets.txt
nageru/scripts/: compile_cef_dll_wrapper.sh  setup_nageru_symlink.sh
shared/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bin2h.cpp  context.cpp  context.h  controller_spin_box.h  disk_space_estimator.cpp  disk_space_estimator.h  ffmpeg_raii.cpp  ffmpeg_raii.h  httpd.cpp  httpd.h  memcpy_interleaved.cpp  memcpy_interleaved.h  meson.build  metacube2.h  metrics.cpp  metrics.h  midi_device.cpp  midi_device.h  midi_mapper_util.h  midi_mapping.proto  mux.cpp  mux.h  post_to_main_thread.h  read_file.cpp  read_file.h  ref_counted_gl_sync.h  ref_counted_texture.cpp  ref_counted_texture.h  shared_defs.h  text_proto.cpp  text_proto.h  timebase.h  va_display.cpp  va_display.h  va_resource_pool.cpp  va_resource_pool.h
